--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="footer">
-    Copyright © 2019
-    <a href="https://github.com/NAYE0NG">Nayeong Kim</a>.
+    Copyright © 2020
+    <a href="https://github.com/arabae">Ara Bae</a>.
     Powered by Jekyll with
     <a href="https://github.com/naye0ng/Grape-Theme">Grape Theme</a>.
   </div>
