update of portfolio area

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,6 +1,6 @@
 <section id="project">
   <div class="project-wrap">
-    <p class="title">RESEARCH 🙋🏻</p>
+    <p class="title">PROJECT 🙋🏻</p>
     <div class="card-container">
       {% for _ in site.data.projects %}
       {% assign project = _.project %}
