--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 {% include head.html %}
+{% if page.use_math %}
+  {% include mathjax_support.html %}
+{% endif %}
 <body>
   <div class="container">
     {{ content }}
