update of search method using meta tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,5 @@
 <head>
+  <meta name="google-site-verification" content="uF_kwfXKNqH7H93TwqR0icGgk8oiyknNf8wA5BF2DTs" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
