--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,28 +1,5 @@
 ---
-layout: page
+layout: default
 ---
-<div id="post">
-  <section class="post-header">
-    <h1 class="title">{{ page.title }}</h1>
-    <p class="subtitle">{{ page.subtitle }}</p>
-    <p class="meta">
-      {{ page.date | date: "%B %-d, %Y" }}
-    </p>
-  </section>
-  <section class="post-content">
-    {{ content }}
-  </section>
-</div>
 
-<div id="top" class="top-btn" onclick="moveTop()">
-  <i class="fas fa-chevron-up"></i>
-</div>
-
-<!-- Disqus -->
-{% if site.theme_settings.disqus_shortname and page.comments %}
-<div id="comments">
-  <div class="border">
-    {% include disqus.html %}
-  </div>
-</div>
-{% endif %}
+{{ content }}
