--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -149,6 +149,15 @@ layout: table_wrappers
             {% endfor %}
           </ul>
         {% endif %}
+		
+		<script type="text/javascript">
+		  var disqus_shortname = '{{ site.disqus_shortname }}';
+		  (function () {
+			var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+			dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+			(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+		  })();
+		</script>
 
         {% capture footer_custom %}
           {%- include footer_custom.html -%}
