--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@ layout: table_wrappers
       {% endif %}
     </nav>
     <footer class="site-footer">
-      This site uses <a href="https://github.com/pmarsceill/just-the-docs">Just the Docs</a>, a documentation theme for Jekyll.
+      Copyright &copy; 2020 Ara Bae
     </footer>
   </div>
   <div class="main" id="top">
