--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -13,6 +13,7 @@
     @include fs-4;
     position: relative;
     margin: 0;
+	font-size: 16px !important;
 
     @include mq(md) {
       @include fs-3;
