--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -3,5 +3,5 @@
 //
 
 $body-font-family: 'Noto Sans KR', sans-serif;
-$mono-font-family: 'Noto Sans KR', sans-serif; !default;
+$mono-font-family: 'Noto Sans KR' !default;
 $root-font-size: 16px !default; // Base font-size for rems
