--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -2,9 +2,8 @@
 // Typography
 //
 
-$body-font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-  Roboto, "Helvetica Neue", Arial, sans-serif !default;
-$mono-font-family: "SFMono-Regular", Menlo, Consolas, Monospace !default;
+$body-font-family: "Noto Sans KR", sans-serif !default;
+$mono-font-family: "Noto Sans KR", sans-serif !default;
 $root-font-size: 16px !default; // Base font-size for rems
 $body-line-height: 1.4 !default;
 $content-line-height: 1.6 !default;
