--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -2,7 +2,9 @@
 // Typography
 //
 
-$body-font-family: -apple-system, "BlinkMacSystemFont", Segoe UI, sans-serif, 'Apple Color Emoji', Segoe UI Emoji, Segoe UI Symbol !default;
+$body-font-family:   '-apple-system', 'BlinkMacSystemFont', 'Apple SD Gothic Neo',
+  'Inter', 'Spoqa Han Sans', 'Segoe UI', Sans-Serif,
+  'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 $mono-font-family: "SFMono-Regular", Menlo, Consolas, Monospace !default;
 $root-font-size: 16px !default; // Base font-size for rems
 $body-line-height: 1.4 !default;
