--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -2,9 +2,8 @@
 // Typography
 //
 
-$body-font-family:   '-apple-system', 'BlinkMacSystemFont', 'Apple SD Gothic Neo',
-  'Inter', 'Spoqa Han Sans', 'Segoe UI', Sans-Serif,
-  'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+$body-font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+  Roboto, "Helvetica Neue", Arial, sans-serif !default;
 $mono-font-family: "SFMono-Regular", Menlo, Consolas, Monospace !default;
 $root-font-size: 16px !default; // Base font-size for rems
 $body-line-height: 1.4 !default;
