--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -2,7 +2,7 @@
 // Typography
 //
 
-$body-font-family: Arial, 'NanumBarunGothic', sans-serif !default;
+$body-font-family: system-ui, Arial, sans-serif !default;
 $mono-font-family: "SFMono-Regular", Menlo, Consolas, Monospace !default;
 $root-font-size: 16px !default; // Base font-size for rems
 $body-line-height: 1.4 !default;
