--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -2,8 +2,8 @@
 // Typography
 //
 
-$body-font-family: system-ui, "Arial", sans-serif !default;
-$mono-font-family: "SFMono-Regular", Menlo, Consolas, Monospace !default;
+$body-font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+$mono-font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
 $root-font-size: 16px !default; // Base font-size for rems
 $body-line-height: 1.4 !default;
 $content-line-height: 1.6 !default;
