--- a/_includes/css/just-the-docs.scss.liquid
+++ b/_includes/css/just-the-docs.scss.liquid
@@ -4,4 +4,5 @@ $logo: "{{ site.logo | absolute_url }}";
 @import "./support/support";
 @import "./color_schemes/{{ include.color_scheme }}";
 @import "./modules";
+@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css); 
 {% include css/custom.scss.liquid %}
