change font family

--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -2,8 +2,8 @@
 // Typography
 //
 
-$body-font-family: "Noto Sans KR", "Nanum Gothic", "Liberation Mono", Menlo, Courier, monospace;
-$mono-font-family: "Noto Sans KR", "Nanum Gothic", "Liberation Mono", Menlo, Courier, monospace;
+$body-font-family: "Noto Sans KR"
+$mono-font-family: "Noto Sans KR"
 $root-font-size: 16px !default; // Base font-size for rems
 $body-line-height: 1.4 !default;
 $content-line-height: 1.6 !default;
