--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
     <title>{{ page.title | default: site.name }}</title>
 	<meta name="description" content="{{site.meta_description}}">
-	<link rel="shortcut icon" href="{{ '/style/image/favicon.png' | prepend: site.baseurl }}">
+	<link rel="shortcut icon" href="{{ 'favicon.ico' | relative_url }}" type="image/x-icon">
     <link rel="apple-touch-icon" href="{{ '/style/image/favicon.png' | prepend: site.baseurl }}"/>
     <link href="{{ '/style/css/highlight.min.css' | prepend: site.baseurl }}" rel="stylesheet">
     <link href="{{ '/style/css/style.min.css' | prepend: site.baseurl }}" rel="stylesheet">
