--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,8 @@ layout: default
     <div class="post-container">
         <div class="navigation" id="navigation">
             <h1>Contents</h1>
-            <ul class="nav sidenav"></ul>
+            <div class="nav sidenav">
+	    </div>
         </div>
         <article class="post-content">
             {{ content }}
