--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,7 @@
     <div class="footer-social">
         <div class="footer-container clearfix">
             <div class="social-list">
+		<a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Farabae.github.io&count_bg=%23FFB300&title_bg=%2381C784&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=true"/></a>
                 <a href="{{ '/' | prepend: site.baseurl }}"><span class='iconfont icon-home'></span>&nbsp;&nbsp;HOME</a>
                 <a rel="nofollow" target="_blank" href="{{site.github}}"><span class='iconfont icon-github'></span>&nbsp;&nbsp;Github</a>
                 <a target="_blank" href="{{ '/feed.xml' | prepend: site.baseurl }}"><span class='iconfont icon-rss'></span>&nbsp;&nbsp;RSS</a>
