--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,4 +12,7 @@
     <link href="{{ '/style/css/highlight.min.css' | prepend: site.baseurl }}" rel="stylesheet">
     <link href="{{ '/style/css/style.min.css' | prepend: site.baseurl }}" rel="stylesheet">
 	<link rel="stylesheet" href="{{ '/style/css/iconfont/iconfont.css' | prepend: site.baseurl }}">
+	{% if page.use_math %}
+	  {% include mathjax_support.html %}
+	{% endif %}
 </head>
